This is more of a backup before I likely break everything trying to build into a usable exe